--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "dependencies": {
     "@clerk/nextjs": "^6.15.0",
     "@prisma/client": "^5.7.0",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-toast": "^1.2.7",
     "@react-google-maps/api": "^2.20.6",
     "class-variance-authority": "^0.7.1",
     "clerk": "^0.8.3",
