--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.15.0",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^5.7.0",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -39,9 +42,11 @@
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
